# ecommerce-backend

./: '  Cargo.toml  diesel.toml
configuration/: base.yaml  local.yaml
migrations/2024-09-24-135543_create_users_table/: up.sql
migrations/2024-09-27-055527_add_user_status_column/: down.sql  up.sql
migrations/2024-09-27-132848_add_confirmations_table/: down.sql  up.sql
migrations/2024-09-30-064824_add_profile_info/: down.sql  up.sql
migrations/2024-09-30-155809_create_inventory_table/: down.sql  up.sql
migrations/2024-10-01-064123_create_orders_table/: up.sql
migrations/2024-10-01-070758_create_order_items_table/: up.sql
migrations/2024-10-01-115135_add_is_admin_column_in_users/: up.sql
migrations/2024-10-04-102736_create_seed_admin/: up.sql
scripts/: init_db.sh
src/: admin_middleware.rs  configuration.rs  db_interaction.rs  email_client.rs  jwt_auth.rs  lib.rs  main.rs  models.rs  password.rs  schema.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/auth/: extractors.rs  jwt.rs  mod.rs
src/db_interaction/: inventory.rs  orders.rs  user.rs
src/domain/: mod.rs  phone_number.rs  user_email.rs
src/routes/: confirm.rs  health_check.rs  mod.rs
src/routes/authentication/: login.rs  logout.rs  register.rs
src/routes/inventory/: get.rs  post.rs
src/routes/order/: delete.rs  get.rs  mod.rs  post.rs  update.rs
src/routes/profile/: get.rs  mod.rs  post.rs
tests/api/: health_check.rs  helpers.rs  inventory.rs  login.rs  main.rs  order.rs  registration.rs  user_profile.rs
