[package]
name = "ecommerce"
version = "0.1.0"
edition = "2021"

[lib]
name = "ecommerce"
path = "src/lib.rs"

[dependencies]
actix-session = { version = "0.10.1", features = ["redis-session-rustls"] }
actix-web = "4.9.0"
anyhow = "1.0.89"
argon2 = { version = "0.5.3", features = ["password-hash"] }
config = "0.14.0"
diesel = { version = "2.2.4", features = ["chrono", "postgres", "postgres_backend", "r2d2", "uuid"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
once_cell = "1.19.0"
r2d2 = "0.8.10"
reqwest = "0.12.7"
serde = "1.0.210"
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["rt"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.12"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
wiremock = "0.6.2"
